samples/_failures_safe/1761661731_65d728_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00392b2c.c: In function ‘display_all_entries’:
./samples/SAFE/__tmp_00392b2c.c:122:16: error: expected declaration or statement at end of input
  122 |                analyzer->entries[i].level, analyzer->entries[i].message);
      |                ^~~~~~~~
./samples/SAFE/__tmp_00392b2c.c:122:16: error: expected declaration or statement at end of input
